--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 PVM_test filter=lfs diff=lfs merge=lfs -text
+*.exe filter=lfs diff=lfs merge=lfs -text
+PVM_test.linux filter=lfs diff=lfs merge=lfs -text
+PVM_test.mac filter=lfs diff=lfs merge=lfs -text
